Closed
Bug 147373
Opened 23 years ago
Closed 23 years ago
Profile migration crashes Trunk M11A N70PR1 [@ ProfileStruct::ExternalizeMigratedFromLocation]
Categories
(Core Graveyard :: Profile: Migration, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.0.1
People
(Reporter: greer, Assigned: ccarlen)
References
Details
(Keywords: crash, regression, topcrash+, Whiteboard: [grr] [adt2 RTM] [ETA 7/11])
Crash Data
Attachments
(3 files)
8.00 KB,
text/plain
|
Details | |
4.10 KB,
text/plain
|
Details | |
698 bytes,
patch
|
bnesse
:
review+
jag+mozilla
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
M1RC3 has 12 crashes in the current talkback data at
ProfileStruct::ExternalizeMigratedFromLocation (nsProfileAccess.cpp). Looking
at the pattern of crashes in past data (below) it looks as though the bug was
introduced between N623 and M1RC2 (4/17 - 5/08).
cc'ing sspitzer and ccarlen who worked on bug 137886. The checkin timing (based
on blame) and the lines in the patches of Bug 137886 look like this the code to
examine.
This is effecting the commercial releases also and should get fixed before RTM.
Here's the stack:
Stack trace(Frame)
ProfileStruct::ExternalizeMigratedFromLocation
[d:\builds\seamonkey\mozilla\profile\src\nsProfileAccess.cpp line 1509]
nsProfileAccess::UpdateRegistry
[d:\builds\seamonkey\mozilla\profile\src\nsProfileAccess.cpp line 773]
nsProfile::MigrateProfileInfo
[d:\builds\seamonkey\mozilla\profile\src\nsProfile.cpp line 2064]
nsProfile::ProcessArgs
[d:\builds\seamonkey\mozilla\profile\src\nsProfile.cpp line 950]
nsProfile::StartupWithArgs
[d:\builds\seamonkey\mozilla\profile\src\nsProfile.cpp line 416]
nsAppShellService::DoProfileStartup
[d:\builds\seamonkey\mozilla\xpfe\appshell\src\nsAppShellService.cpp line 250]
InitializeProfileService
[d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp line 1114]
main1 [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp
line 1412]
main [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp
line 1809]
WinMain
[d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp line 1827]
WinMainCRTStartup()
KERNEL32.DLL + 0x1b560 (0xbff8b560)
KERNEL32.DLL + 0x1b412 (0xbff8b412)
KERNEL32.DLL + 0x19dd5 (0xbff89dd5)
(6615339) Comments: Trying to reinstall Mozilla. profile.dll failed
------------------
M1RC1 (ProfileStruct::ExternalizeMigratedFromLocation): 0
Unique Users 0
M1RC2 (ProfileStruct::ExternalizeMigratedFromLocation): 19
Unique Users 9
(6465783) - [Windows 95 4.0 build 67306684] (Build 2002051008)- 2002-05-20 :
loading
(6615138) - [Windows 98 4.10 build 67766446] (Build 2002051008)- 2002-05-23 :
Attempting to start the program with one of two profiles. A scandisk and defrag
had been completed recently and system rebooted.
(6615158) - [Windows 98 4.10 build 67766446] (Build 2002051008)- 2002-05-23 :
Attempting to delete profiles
(6615174) - [Windows 98 4.10 build 67766446] (Build 2002051008)- 2002-05-23 :
Attempting to create a new profile.
(6614266) - [Windows NT 5.1 build 2600] (Build 2002051008)- 2002-05-23 :
Starting it up
M1RC3 (ProfileStruct::ExternalizeMigratedFromLocation): 12
Unique Users 9
(6615339) - [Windows 98 4.10 build 67766446] (Build 2002052308)- 2002-05-23 :
Trying to reinstall Mozilla. profile.dll failed
Trunk (ProfileStruct::ExternalizeMigratedFromLocation): 2
Unique Users 2
(6691689) - [Windows NT 4.0 build 1381] (Build 2002052508)- 2002-05-26 :
starting up ! URL:
(6360533) - [Linux 2.4.7-10] (Build 2002051607)- 2002-05-16 : Starting mozilla
immediatly after install.
N623 (ProfileStruct::ExternalizeMigratedFromLocation): 0
Unique Users 0
N70PR1 (ProfileStruct::ExternalizeMigratedFromLocation): 7
Unique Users 6
(6545528) - [Windows 98 4.90 build 73010104] (Build 2002051220)- 2002-05-22 :
End of NS7PR1 installation
(6702070) - [Windows NT 5.0 build 2195] (Build 2002051220)- 2002-05-26 :
Attempting to create user profile
(6570021) - [Windows NT 5.1 build 2600] (Build 2002051220)- 2002-05-22 : first
start up after install
Reassigning to Seth for first look, since he is familiar with the issues in bug
137886. Nominating nsbeta1.
cc'ing selmer who reported 137886 and may have intrest in this profile migration
bug as 7.0 approaches.
Keywords: regression
Comment 4•23 years ago
|
||
Discussed in mail news bug meeting. Decided to assign to ccarlen this bug.
Assignee: sspitzer → ccarlen
Updating summary to M11A.
Summary: Profile migration crashes Trunk M1RC3 N70PR1 [@ ProfileStruct::ExternalizeMigratedFromLocation] → Profile migration crashes Trunk M11A N70PR1 [@ ProfileStruct::ExternalizeMigratedFromLocation]
Conrad, still getting a lot of these bugs reported in Talkback for current
releases. Several of the comments point to low memory issues or manual copying
of profiles. I'll keep looking.
Comment 8•23 years ago
|
||
I can't actually reproduce this, but the stack appears to point at the
ConvertUCS2toUTF8 call. We could try this...
Index: mozilla/profile/src/nsProfileAccess.cpp
===================================================================
RCS file: /cvsroot/mozilla/profile/src/nsProfileAccess.cpp,v
retrieving revision 1.66
diff -u -2 -r1.66 nsProfileAccess.cpp
--- mozilla/profile/src/nsProfileAccess.cpp 16 May 2002 21:17:27 -0000 1.66
+++ mozilla/profile/src/nsProfileAccess.cpp 25 Jun 2002 17:52:45 -0000
@@ -1507,5 +1507,6 @@
nsAutoString path;
rv = resolvedLocation->GetPath(path);
- regData = NS_ConvertUCS2toUTF8(path);
+ if (NS_SUCCEEDED(rv))
+ regData = NS_ConvertUCS2toUTF8(path);
#endif
Assignee | ||
Comment 9•23 years ago
|
||
I see the problem - patch coming up.
Assignee | ||
Comment 10•23 years ago
|
||
This routine was just using the wrong variable except on Mac.
Comment 11•23 years ago
|
||
Can we get r=/sr=?
Updated•23 years ago
|
Comment 12•23 years ago
|
||
Comment on attachment 89413 [details] [diff] [review]
patch
r=bnesse.
Attachment #89413 -
Flags: review+
Comment 13•23 years ago
|
||
Comment on attachment 89413 [details] [diff] [review]
patch
sr=jag
Attachment #89413 -
Flags: superreview+
Comment 14•23 years ago
|
||
The r= was given for this one on 07/01, who can sr= this one? jag?
Conrad - After jag sr= this one, can you check this one in? thanks!
Whiteboard: [grr] [adt2 RTM] → [grr] [adt2 RTM] [ETA Needed]
Assignee | ||
Comment 15•23 years ago
|
||
Will do.
Whiteboard: [grr] [adt2 RTM] [ETA Needed] → [grr] [adt2 RTM] [ETA 7/11]
Comment 16•23 years ago
|
||
Comment on attachment 89413 [details] [diff] [review]
patch
a=asa (on behalf of drivers) for checkin to the 1.1 trunk.
Attachment #89413 -
Flags: approval+
Comment 17•23 years ago
|
||
it sounds like this crash is present on the 1.0 branch, so i am gonna go ahead
and add the adt1.0.1 keyword.
ktrina: looks like conrad will check this into the trunk today. if he does, can
you verify tomorrow? thanks!
Keywords: adt1.0.1
Assignee | ||
Comment 18•23 years ago
|
||
Fixed. Here's how to make it happen and verify:
1. Migrate a 4.x profile and launch with it
2. Exit the app
3. Delete the directory for the migrated profile (on the desktop, not from
profile mgr)
4. Start the app and select a profile whose directory exists
5. Crash
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 19•23 years ago
|
||
K'Trina, can you verify this on the trunk so we can try to check this into
tomorrow's branch?
Comment 21•23 years ago
|
||
Adding adt1.0.1+ on behalf of the adt. Please check into the Mozilla 1.0 branch.
Updated•23 years ago
|
Keywords: mozilla1.0.1
Comment 22•23 years ago
|
||
please checkin to the 1.0.1 branch. once there, remove the "mozilla1.0.1+"
keyword and add the "fixed1.0.1" keyword.
Keywords: mozilla1.0.1 → mozilla1.0.1+
Comment 24•23 years ago
|
||
ktrina: can you verify this on the 1.0 branch, then replace "fixed1.0.1" with
"verified1.0.1"?
Comment 25•23 years ago
|
||
Verified on build 2002-07-19-08-1.0 and replaced keyword "fixed1.0.1" with
"verified1.0.1"
Keywords: fixed1.0.1 → verified1.0.1
Updated•14 years ago
|
Crash Signature: [@ ProfileStruct::ExternalizeMigratedFromLocation]
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•