Bug 147373 - Crash in nsProfileStruct::ExternalizeMigratedFromLocation. r=bnesse/sr=jag/a=asa